# freertos-pine64

./: .gitignore
Source/: CMakeLists.txt  a64_toolchain.cmake  compile.txt  fr.lds
Source/include/: FreeRTOSConfig.h  portmacro.h
Source/portable/: CMakeLists.txt  vector_table.S
Source/src/: main.c  memstr.c  my.c  port.c  portASM.S  tasks.c  tick_config.c  translation_table.S  vector_table.S
Source/src/portable/: CMakeLists.txt  FreeRTOSConfig.h  tick_config.c
