#configure compile
PROJECT(FreeRtos_PINE64 C ASM)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

#SET(PORT portable)
SET(TARGET_EXE_Z "frpine")

#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/portable/)

SET(A_SRC ${PROJECT_SOURCE_DIR}/src/portASM.S ${PROJECT_SOURCE_DIR}/src/vector_table.S)
AUX_SOURCE_DIRECTORY(./src FR_SOURCE_DIR)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)# ${PROJECT_SOURCE_DIR}/src)

ADD_EXECUTABLE(${TARGET_EXE_Z} ${FR_SOURCE_DIR})

#TARGET_LINK_LIBRARIES(${TARGET_EXE_Z} libport)
#TARGET_LINK_LIBRARIES(${TARGET_EXE_Z} src/portable/libport)



